--- a/css/tablet.css
+++ b/css/tablet.css
@@ -15,8 +15,8 @@
     }
 
     .awards {
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto;
 
         .award {
             img {
